name:                line-bot-sdk
version:             0.1.0.0
synopsis:            Haskell SDK for LINE Messaging API
homepage:            https://github.com/moleike/line-bot-sdk#readme
bug-reports:         https://github.com/moleike/line-bot-sdk/issues
license:             BSD3
license-file:        LICENSE
author:              Alexandre Moreno
maintainer:          Alexandre Moreno <alexmorenocano@gmail.com>
stability:           experimental
copyright:           (c) 2018 Alexandre Moreno
category:            Network, Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:
  A Servant library for building LINE chatbots. This package is composed
  of the following modules:
  .
    * A client library for the <https://developers.line.biz/en/docs/messaging-api/ LINE Messaging API>,
        including the 'Line' monad, which manages the channel credentials.
  .
    * A servant combinator to write safe Line webhooks.
  .
  To get started, see the documentation for the @Line.Bot.Client@
  and @Line.Bot.Webhook@ modules below.

library
  hs-source-dirs:      src
  exposed-modules:     Line.Bot.Webhook
                     , Line.Bot.Client
                     , Line.Bot.Data
                     , Line.Bot.Endpoints
                     , Line.Bot.Webhook.Data

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant 
                     , servant-server
                     , servant-client
                     , servant-client-core
                     , http-client
                     , http-client-tls
                     , bytestring
                     , base64-bytestring
                     , cryptohash-sha256
                     , text
                     , time
                     , transformers
                     , errors
                     , scientific
                     , http-types
                     , string-conversions
                     , errors
                     , wai
  default-language:    Haskell2010

executable echo-server
  hs-source-dirs:      examples
  main-is:             Echo.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , line-bot-sdk
                     , servant
                     , servant-server
                     , servant-client
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp

  default-language:    Haskell2010

test-suite line-bot-sdk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , line-bot-sdk
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/moleike/line-bot-sdk
