name:                line-bot-sdk
version:             0.3.0.0
synopsis:            Haskell SDK for LINE Messaging API
homepage:            https://github.com/moleike/line-bot-sdk#readme
bug-reports:         https://github.com/moleike/line-bot-sdk/issues
license:             BSD3
license-file:        LICENSE
author:              Alexandre Moreno
maintainer:          Alexandre Moreno <alexmorenocano@gmail.com>
stability:           experimental
copyright:           (c) 2018 Alexandre Moreno
category:            Network, Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:
  A Servant library for building LINE chatbots. This package is composed
  of the following modules:
  .
    * A client library for the <https://developers.line.biz/en/docs/messaging-api/ LINE Messaging API>,
      including the 'Line' monad, which manages the channel credentials.
  .
    * A servant combinator to write safe Line webhooks.
  .
  To get started, see the documentation for the @Line.Bot.Client@
  and @Line.Bot.Webhook@ modules below.

library
  hs-source-dirs:      src
  exposed-modules:     Line.Bot.Webhook
                     , Line.Bot.Webhook.Events
                     , Line.Bot.Client
                     , Line.Bot.Types

  other-modules:       Line.Bot.Endpoints
                     , Line.Bot.Client.Auth

  build-depends:       base                 >= 4.7 && < 5
                     , aeson                >= 1.4.2 && < 1.5
                     , bytestring           >= 0.10.8 && < 0.11
                     , scientific           >= 0.3.6 && < 0.4
                     , text                 >= 1.2.3 && < 1.3
                     , transformers         >= 0.5.5 && < 0.6
                     , time                 >= 1.8.0 && < 1.9
                     , base64-bytestring    >= 1.0.0 && < 1.1
                     , cryptohash-sha256    >= 0.11.101 && < 0.12
                     , errors               >= 2.3.0 && < 2.4
                     , http-client          >= 0.5.14 && < 0.7
                     , http-types           >= 0.12.2 && < 0.13
                     , http-api-data        >= 0.4 && < 0.5
                     , http-client-tls      >= 0.3.5 && < 0.4
                     , servant              >= 0.15 && < 0.16
                     , string-conversions   >= 0.4.0 && < 0.5
                     , servant-client       >= 0.15 && < 0.16
                     , servant-client-core  >= 0.15 && < 0.16
                     , servant-server       >= 0.15 && < 0.16
                     , wai                  >= 3.2.2 && < 3.3
                     , wai-extra            >= 3.0.25 && < 3.1

  default-language:    Haskell2010

executable echo-server
  hs-source-dirs:      examples
  main-is:             Echo.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base                 >= 4.7 && < 5
                     , line-bot-sdk
                     , servant              >= 0.15 && < 0.16
                     , servant-server       >= 0.15 && < 0.16
                     , servant-client       >= 0.15 && < 0.16
                     , transformers         >= 0.5.5 && < 0.6
                     , time                 >= 1.8.0 && < 1.9
                     , wai                  >= 3.2.2 && < 3.3
                     , wai-extra            >= 3.0.25 && < 3.1
                     , warp                 >= 3.2.26 && < 3.3

  default-language:    Haskell2010

test-suite line-bot-sdk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , line-bot-sdk
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/moleike/line-bot-sdk
