name:                line-bot-sdk
version:             0.7.2
synopsis:            Haskell SDK for LINE Messaging API
homepage:            https://github.com/moleike/line-bot-sdk#readme
bug-reports:         https://github.com/moleike/line-bot-sdk/issues
license:             BSD3
x-license:           BSD-3-Clause
license-file:        LICENSE
author:              Alexandre Moreno
maintainer:          Alexandre Moreno <alexmorenocano@gmail.com>
copyright:           (c) Alexandre Moreno, 2019-2021
category:            Network, Web
build-type:          Simple
extra-doc-files:     README.md
cabal-version:       >=1.18
description:
  A Servant library for building LINE chatbots. This package is composed
  of the following modules:
  .
    * A client library for the <https://developers.line.biz/en/docs/messaging-api/ LINE Messaging API>,
      including the 'Line' monad, which manages the channel credentials.
  .
    * A servant combinator to write safe Line webhooks.
  .
  To get started, see the documentation for the @Line.Bot.Client@
  and @Line.Bot.Webhook@ modules below.

library
  hs-source-dirs:      src
  exposed-modules:     Line.Bot.Webhook
                     , Line.Bot.Webhook.Events
                     , Line.Bot.Client
                     , Line.Bot.Types
                     , Line.Bot.Internal.Endpoints

  other-modules:       Paths_line_bot_sdk
  autogen-modules:     Paths_line_bot_sdk

  build-depends:
    aeson                 >= 1.5.6 && < 1.6,
    base                  >= 4.14.1 && < 4.15,
    bytestring            >= 0.10.12 && < 0.11,
    deepseq               >= 1.4.4 && < 1.5,
    text                  >= 1.2.4 && < 1.3,
    time                  >= 1.9.3 && < 1.10,
    mtl                   >= 2.2.2 && < 2.3,
    base64-bytestring     >= 1.1.0 && < 1.2,
    cryptohash-sha256     >= 0.11.102 && < 0.12,
    http-api-data         >= 0.4.1.1 && < 0.5,
    http-types            >= 0.12.3 && < 0.13,
    http-client           >= 0.6.4 && < 0.7,
    http-client-tls       >= 0.3.5 && < 0.4,
    http-media            >= 0.8.0 && < 0.9,
    servant               >= 0.18.2 && < 0.19,
    string-conversions    >= 0.4.0 && < 0.5,
    servant-client        >= 0.18.2 && < 0.19,
    servant-client-core   >= 0.18.2 && < 0.19,
    servant-server        >= 0.18.2 && < 0.19,
    wai                   >= 3.2.3 && < 3.3

  default-language:    Haskell2010

test-suite line-bot-sdk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Line.Bot.WebhookSpec
                     , Line.Bot.ClientSpec
  main-is:             Spec.hs
  build-depends:
    base,
    line-bot-sdk,
    base64-bytestring,
    cryptohash-sha256,
    text,
    bytestring,
    hspec,
    hspec-wai,
    hspec-expectations,
    http-types,
    http-client,
    http-client-tls,
    aeson,
    transformers,
    aeson-qq,
    servant,
    servant-server,
    servant-client,
    servant-client-core,
    wai,
    warp,
    free,
    time ,
    deepseq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-tool-depends: hspec-discover:hspec-discover


source-repository head
  type:     git
  location: https://github.com/moleike/line-bot-sdk
