name: examples
version: 0.1
cabal-version: >=1.18
build-type: Simple
description: minimal examples

executable echo-server
  hs-source-dirs:      .
  main-is:             Echo.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    line-bot-sdk,
    base,
    servant,
    servant-server,
    transformers,
    wai,
    wai-extra,
    warp

  default-language:    Haskell2010
